Añadidos estilos globales y creado componente menu

--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
-
-<router-outlet></router-outlet>
+<bbl-header></bbl-header>
+<bbl-main>
+    <router-outlet></router-outlet>
+</bbl-main>
+<bbl-footer></bbl-footer>
