--- a/practica-angular/src/app/core/header/header.component.html
+++ b/practica-angular/src/app/core/header/header.component.html
@@ -1,3 +1,6 @@
-<p>
-  header works!
-</p>
+<div class="container">
+  <header>
+      <a href="#"><img src="./img/Logo_Salto_Base.jpg" alt="Logo Salto Base"></a>
+      <h1>Salto Base</h1>
+      <button id="botonMenu" class="botonMenu"><span class ="fa fa-bars"></span></button>
+  </header>
