--- a/practica-angular/src/app/core/footer/footer.component.html
+++ b/practica-angular/src/app/core/footer/footer.component.html
@@ -1,3 +1,25 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="nombres">
+      <div id="hcard-Diego-Garzon-Molina" class="vcard">
+              <span class="fn n">
+                 <span class="given-name">Diego</span>
+               <span class="additional-name"></span>
+               <span class="family-name">Garzon Molina</span>
+             </span>
+             </div>
+             <div id="hcard-Jesus-Perucha" class="vcard">
+                  <span class="fn n">
+                     <span class="given-name">Jesus</span>
+                   <span class="additional-name"></span>
+                   <span class="family-name">Perucha Perez</span>
+                 </span>
+                 </div>
+              </div>
+              <div class="direccion">
+              <div class="org">Babel</div>
+              <div class="adr">
+               <div class="street-address">Av America</div>
+               <span class="locality">Madrid</span>
+              </div>
+              </div>
+</footer>
