--- a/practica-angular/src/app/core/header/header.component.html
+++ b/practica-angular/src/app/core/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="container jumbotron col">
     <div class="row">
       <header>
-          <a href="#"><img src="assets/Logo_Salto_Base.jpg" alt="Logo Salto Base"></a>
+          <a href="#"><img src="assets/Logo_Salto_Base.jpg" classs="img-fluid" alt="Logo Salto Base"></a>
           <div class="col text-center pt-5">
               <h1>Salto Base</h1>
             </div>  
-            <button id="botonMenu" class="botonMenu"><span class ="fa fa-bars"></span></button>
+         <!--    <button id="botonMenu" class="botonMenu col"><span class ="fa fa-bars"></span></button> -->
       </header>
   </div>
  
