--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -1,11 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container">
-  <div class="row">
-      <bbl-header class="col"></bbl-header>
-  </div>
-
-</div>
-
+<bbl-header></bbl-header>
 <bbl-main>
     <router-outlet></router-outlet>
 </bbl-main>
