Hechos los componentes que forman inicio

--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -3,10 +3,9 @@
   <div class="row">
       <bbl-header class="col"></bbl-header>
   </div>
-
 </div>
 
-<bbl-main>
+<bbl-inicio>
     <router-outlet></router-outlet>
-</bbl-main>
+</bbl-inicio>
 <bbl-footer></bbl-footer>
