--- a/practica-angular/src/app/core/header/header.component.html
+++ b/practica-angular/src/app/core/header/header.component.html
@@ -1,11 +1,12 @@
-<div class="container jumbotron col">
-    <div class="row">
-      <header>
-          <a href="#"><img src="assets/Logo_Salto_Base.jpg" classs="img-fluid" alt="Logo Salto Base"></a>
-          <div class="col text-center pt-5">
-              <h1>Salto Base</h1>
-            </div>  
-         <!--    <button id="botonMenu" class="botonMenu col"><span class ="fa fa-bars"></span></button> -->
+<div class="container col">
+      <header class="row">
+
+          <a class="col-2" href="#"><img src="assets/Logo_Salto_Base.jpg" classs="img-fluid" alt="Logo Salto Base"></a>
+         
+              <h1  class="col-8  text-center p-5">Salto Base</h1>
+        
+            <button id="botonMenu" class="botonMenu  m-5 p-1 col-1 oculto"><span class ="fa fa-bars"></span></button>
+       
       </header>
   </div>
  
