--- a/practica-angular/src/styles.css
+++ b/practica-angular/src/styles.css
@@ -1,6 +1,7 @@
-/*@import "./reset.css";*/
+@import "./reset.css";
 @import url('https://fonts.googleapis.com/css?family=Questrial');
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 html{
     font-family: "Questrial", sans-serif;
 }
