--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <bbl-header></bbl-header>
-<bbl-main>
+<bbl-main></bbl-main>
+<main>
     <router-outlet></router-outlet>
-</bbl-main>
+</main>
 <bbl-footer></bbl-footer>
