--- a/practica-angular/src/app/core/main/main.component.html
+++ b/practica-angular/src/app/core/main/main.component.html
@@ -1,20 +1,23 @@
 <div class="container">
     <div class="row">
-    <nav class="col">
-        <ul class="nav nav-pills">
-        <a class="nav-link" routerLinkActive = "active" routerLink = "inicio">Inicio</a>
-        <li class="nav-item nav-link">
-        </li>
-        <a class="nav-link" routerLinkActive = "active" routerLink = "centros">Centros</a>
-        <li class="nav-item nav-link">
-        </li>
-        <a class="nav-link" routerLinkActive = "active" routerLink = "historia">Historia</a>
-        <li class="nav-item nav-link">
-        </li>
-        <a class="nav-link" routerLinkActive = "active" routerLink = "competiciones">Competiciones</a>
-        <li class="nav-item nav-link">
-        </li>
-        <a class="nav-link" routerLinkActive = "active" routerLink = "about">About</a>
-        <li class="nav-item nav-link">
-        </li>
-        
+        <nav class="col 12">
+            <ul class="nav nav-pills">
+                <a class="nav-link" routerLinkActive = "active" routerLink = "inicio">Inicio</a>
+                <li class="nav-item nav-link">
+                </li>
+                <a class="nav-link" routerLinkActive = "active" routerLink = "centros">Centros</a>
+                <li class="nav-item nav-link">
+                </li>
+                <a class="nav-link" routerLinkActive = "active" routerLink = "historia">Historia</a>
+                <li class="nav-item nav-link">
+                </li>
+                <a class="nav-link" routerLinkActive = "active" routerLink = "competiciones">Competiciones</a>
+                <li class="nav-item nav-link">
+                </li>
+                <a class="nav-link" routerLinkActive = "active" routerLink = "about">About</a>
+                <li class="nav-item nav-link">
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
