Eliminados modulos main e historia. Añadido y enrutado modulo blog Limpiado el menu

--- a/practica-angular/src/app/core/menu/menu.component.html
+++ b/practica-angular/src/app/core/menu/menu.component.html
@@ -1,9 +1,13 @@
-<nav id="menu_escritorio">
-  <ul class="flex">
-      <li><a href="#" routerLinkActive="active" routerLink="inicio" title="home">Inicio</a></li>
-      <li><a href="#" routerLinkActive="active" routerLink="centros" title="centros">Centros</a></li>
-      <li><a href="#" routerLinkActive="active" routerLink="historia" title="historia">Historia</a></li>
-      <li><a href="#" routerLinkActive="active" routerLink="competiciones" title="competiciones">Competiciones</a></li>
-      <li><a href="#" routerLinkActive="active" routerLink="about" title="about">About</a></li>
-  </ul>    
-</nav>
+<div class="container">
+    <div class="row">
+      <nav id="menu_escritorio" class="col">
+        <ul class="nav nav-pills">
+            <li class="nav-item col"><a class="nav-link" routerLinkActive="active" routerLink="inicio" title="home">Inicio</a></li>
+            <li class="nav-item col"><a class="nav-link" routerLinkActive="active" routerLink="centros" title="centros">Centros</a></li>
+            <li class="nav-item col"><a class="nav-link" routerLinkActive="active" routerLink="competiciones" title="competiciones">Competiciones</a></li>
+            <li class="nav-item col"><a class="nav-link" routerLinkActive="active" routerLink="blog" title="blog">Blog</a></li>
+            <li class="nav-item col"><a class="nav-link" routerLinkActive="active" routerLink="about" title="about">About</a></li>
+        </ul>    
+      </nav>
+  </div>
+</div>
