--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <bbl-header></bbl-header>
-<bbl-main></bbl-main>
-<main>
+<bbl-menu></bbl-menu>
+<main class="col">
     <router-outlet></router-outlet>
 </main>
 <bbl-footer></bbl-footer>
