--- a/practica-angular/src/app/core/header/header.component.css
+++ b/practica-angular/src/app/core/header/header.component.css
@@ -8,7 +8,7 @@ header{
 .oculto{
     display:none !important;
 }
-/*
+
 header img{
     margin-bottom: auto;
     margin-top: auto;
@@ -24,7 +24,7 @@ header h1{
     font-size: 4rem;
     margin: auto;
 }
-header > button{
+/* header > button{
     margin-top: auto;
     margin-bottom: auto;
     font-size: 3rem;
