enrutamiento completo, colocacion inicial de componentes about

--- a/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
+++ b/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
@@ -1,3 +1,23 @@
-<p>
-  muestra-datos works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-10">
+<div id="datosEnviados" class="oculto">
+  <h2>Datos</h2>
+ 
+   
+
+      <label class="col">Nombre: </label><label id="nombreDatos"></label>
+      <label class="col">Email: </label><label id="emailDatos"></label>
+      <label class="col" >Experiencia en deportes de riesgo: </label><label id="experienciaDatos"></label>
+      <label class="col">Envianos tu opinión: </label><label id="opinionDatos"></label>
+      <label class="col">Deseo recibir noticias y oportunidad sobre salto base: </label><label id="checkboxDatos"></label>
+  
+
+
+<label class="center">
+  <a routerLink="../autores" id="linkAutores" title="linkAutores" routerLinkActive = "active">Autores</a> /
+  <a routerLink="../formulario" id="linkFormulario" class="desactivo" routerLinkActive = "active">Contacta con nosotros:</a>
+</label>
+    </div>
+  </div>
+</div>
