--- a/practica-angular/src/app/about/autores/autores.component.html
+++ b/practica-angular/src/app/about/autores/autores.component.html
@@ -1,29 +1,40 @@
+<div class="container">
+  <div class="row">
+    <div class="col-10">
 <div id="autores_container">
   <h2>Autores</h2>
-  <section class="cv">  
-<article class="autores">
+  <section>  
+    <div class= "row">
+<article class="autores col-7" >
       <p><strong>Nombre:</strong> Diego Garzon</p>
       <p><strong>Fecha de nacimiento:</strong>  17 de Febrero de 1993</p>
       <p><strong>Estudios:</strong> Graduado en ingeniería informatica por la Universidad Carlos III de Madrid. Estudiando Máster en desarrollo de aplicaciones y servicios moviles por la Universidad Politécnica de Madrid</p>
       <p><strong>Aficiones:</strong> Salto Base, paracaidismo, y fan absoluto e incondicional del helado</p>
- 
-  <figure class="left">
-      <img src="assets/image_about_autor1.jpg" alt="Autor 1, Diego Garzon" title="Autor 1, Diego Garzon">
-  </figure>
 </article>
-<article class="autores">
+<figure class="left col-5" >
+    <img src="assets/image_about_autor1.jpg" alt="Autor 1, Diego Garzon" title="Autor 1, Diego Garzon">
+</figure> 
+</div>
+<div class= "row">
+    <figure class="right col-5">
+        <img src="assets/image_about_autor2.jpg" alt="Autor 1, Jesús Perucha" title="Autor 2, Jesús Perucha">
+    </figure>
+<article class="autores col-7">
       <p><strong>Nombre:</strong> Jesús Perucha</p>
       <p><strong>Fecha de nacimiento:</strong> 30 de Junio de 1995.</p>
       <p><strong>Estudios:</strong> Estudiando Grado de ingeniería del software en la Universidad Complutense de Madrid.</p>
       <p><strong>Aficiones:</strong> Salto Base, curling y amante de los cachorritos.</p> 
-  <figure class="right">
-      <img src="assets/image_about_autor2.jpg" alt="Autor 1, Jesús Perucha" title="Autor 2, Jesús Perucha">
-  </figure>
-
+  
 </article>
+
+
+</div>
 </section>
 </div>
 <label class="center">
-  <a routerLink="../autores" id="linkAutores" title="linkAutores">Autores</a>/
-  <a routerLink="../formulario" id="linkFormulario" class="desactivo" >Contacta con nosotros:</a>
+  <a routerLink="../autores" id="linkAutores" title="linkAutores" routerLinkActive = "active">Autores</a> /
+  <a routerLink="../formulario" id="linkFormulario" class="desactivo" routerLinkActive = "active" >Contacta con nosotros:</a>
 </label>
+    </div>
+  </div>
+</div>
