--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -1,27 +1,30 @@
+<div class="container">
+    <div class="row">
+      <div class="col-10">
 <div id="formulario" class="oculto">
   <h2>Contacta con nosotros</h2>
   <form name="form_1" id="form_1" method="post"> 
-      <ul>
-          <li><label for="nombre">Nombre: <input id ="nombre" type="text" name="nombre" placeholder="Introduce tu nombre" required></label></li>
-          <li><label for="email">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label></li>
-          <li><label>¿Cuanta experiencia tienes en deportes de riesgo?</label></li>
-          <li><label for="radio_poco"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label></li>
-          <li><label for="radio_normal"><input type="radio" id="radio_normal" name="experiencia"  value="Normal" required>Normal</label> </li>
-          <li><label for="radio_mucho"><input type="radio" id="radio_mucho" name="experiencia"  value="Mucha" required>Mucho</label></li>
-          <li><label for="coment">Envianos tu opinión:</label></li>
-          <li><textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos"></textarea></li>
-          <li><label for="checkbox"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label></li>         
-          
-      </ul>
+          <label for="nombre" class="col">Nombre: <input id ="nombre" type="text" name="nombre" placeholder="Introduce tu nombre" required></label>
+          <label for="email" class="col">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label>
+          <label class="col">¿Cuanta experiencia tienes en deportes de riesgo?</label>
+          <label for="radio_poco" class="col"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label>
+          <label for="radio_normal" class="col"><input type="radio" id="radio_normal" name="experiencia"  value="Normal" required>Normal</label> 
+          <label for="radio_mucho" class="col"><input type="radio" id="radio_mucho" name="experiencia"  value="Mucha" required>Mucho</label>
+          <label for="coment" class="col">Envianos tu opinión:</label>
+          <textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos" class="col"></textarea>
+          <label for="checkbox" class="col"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label>         
       <div class="center">
          
           <button type="reset">Borrar</button>
-          <button id="submit" type="submit">Enviar</button>
+          <button id="submit" type="submit"  routerLink="../muestra-datos">Enviar</button>
       </div>
  </form>
 </div>
 
 <label class="center">
-  <a routerLink="../autores" id="linkAutores" title="linkAutores">Autores</a>/
-  <a routerLink="../formulario" id="linkFormulario" class="desactivo" >Contacta con nosotros:</a>
+  <a routerLink="../autores" id="linkAutores" title="linkAutores" routerLinkActive = "active">Autores</a> /
+  <a routerLink="../formulario" id="linkFormulario" class="desactivo" routerLinkActive = "active">Contacta con nosotros:</a>
 </label>
+      </div>
+    </div>
+</div>
