Creado servicio entradas blog e instalado http-server

--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -13,10 +13,10 @@
           <label for="coment" class="col">Envianos tu opinión:</label>
           <textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos" class="col"></textarea>
           <label for="checkbox" class="col"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label>         
-      <div class="center">
+      <div class="spaced">
          
-          <button type="reset">Borrar</button>
-          <button id="submit" type="submit"  routerLink="../muestra-datos">Enviar</button>
+          <button type="reset" class="btn btn-secondary">Borrar</button>
+          <button id="submit" type="submit"  routerLink="../muestra-datos" class="btn btn-secondary">Enviar</button>
       </div>
  </form>
 </div>
