--- a/practica-angular/src/app/blog/formulario/formulario.component.html
+++ b/practica-angular/src/app/blog/formulario/formulario.component.html
@@ -1,25 +1,26 @@
-<div id="formulario">
-    <h2>Escribe una nueva entrada</h2>
-    <form name="form_entrada" id="form_entrada" method="post"> 
-        <ul>
-            <li><label for="nombreAutor">Nombre Autor: <input id ="nombreAutor" type="text" name="nombreAutor" placeholder="Introduce tu nombre" required></label></li>
-            <li><label for="email">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label></li>
-            <li><label for="tituloEntrada">Titulo entrada: <input id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" required></label></li>
-            <li><textarea id="entrada" name="entrada" placeholder="Escriba los nueva entrada"></textarea></li>
+<div id="formulario" class="row">
+  <div class="col">
+      <h2>Escribe una nueva entrada</h2>
+      <form name="form_entrada" id="form_entrada" method="post"> 
+          <label for="autor" class="col">Autor: <input id ="autor" type="text" name="autor" placeholder="Introduce tu nombre" required></label>
+          <label for="email" class="col">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label>
+          <label for="tituloEntrada" class="col">Titulo entrada: <input id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" required></label>
+          <textarea id="entrada" name="entrada" placeholder="Escriba los nueva entrada" class="col"></textarea>
+          <textarea id="keywords" name="keywords" placeholder="Escriba palabras clave de la entrada" class="col"></textarea>
+              <!-- <li><label>¿Cuanta experiencia tienes en deportes de riesgo?</label></li>
+              <li><label for="radio_poco"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label></li>
+              <li><label for="radio_normal"><input type="radio" id="radio_normal" name="experiencia"  value="Normal" required>Normal</label> </li>
+              <li><label for="radio_mucho"><input type="radio" id="radio_mucho" name="experiencia"  value="Mucha" required>Mucho</label></li>
+              <li><label for="coment">Envianos tu opinión:</label></li>
+              <li><textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos"></textarea></li>
+              <li><label for="checkbox"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label></li>          -->
+              
+          
+          <div class="spaced">
             
-            <!-- <li><label>¿Cuanta experiencia tienes en deportes de riesgo?</label></li>
-            <li><label for="radio_poco"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label></li>
-            <li><label for="radio_normal"><input type="radio" id="radio_normal" name="experiencia"  value="Normal" required>Normal</label> </li>
-            <li><label for="radio_mucho"><input type="radio" id="radio_mucho" name="experiencia"  value="Mucha" required>Mucho</label></li>
-            <li><label for="coment">Envianos tu opinión:</label></li>
-            <li><textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos"></textarea></li>
-            <li><label for="checkbox"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label></li>          -->
-            
-        </ul>
-        <div class="center">
-           
-            <button type="reset">Borrar</button>
-            <button id="submit" type="submit">Publicar</button>
-        </div>
-   </form>
+              <button type="reset" class="btn btn-secondary">Borrar</button>
+              <button id="submit" type="submit" class="btn btn-secondary">Publicar</button>
+          </div>
+      </form>
+    </div>
   </div>
