--- a/practica-angular/src/app/blog/formulario/formulario.component.html
+++ b/practica-angular/src/app/blog/formulario/formulario.component.html
@@ -1,12 +1,12 @@
-<div id="formulario" class="row">
+<div id="formulario" class="row" novalidate [ngClass]="validado">
   <div class="col">
       <h2>Escribe una nueva entrada</h2>
       <form name="form_entrada" id="form_entrada" method="post" (ngSubmit)="enviar()" #formEntradas="ngForm"> 
-          <label for="autor" class="col">Autor: <input id ="autor" type="text" name="autor" placeholder="Introduce tu nombre" required></label>
-          <label for="email" class="col">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label>
-          <label for="tituloEntrada" class="col">Titulo entrada: <input id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" required></label>
-          <textarea id="entrada" name="entrada" placeholder="Escriba los nueva entrada" class="col"></textarea>
-          <textarea id="keywords" name="keywords" placeholder="Escriba palabras clave de la entrada" class="col"></textarea>
+          <label for="autor" class="col">Autor: <input id ="autor" type="text" name="autor" placeholder="Introduce tu nombre" required [(ngModel)]="entrada.autor"></label>
+          <label for="email" class="col">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required [(ngModel)]="entrada.email"></label>
+          <label for="tituloEntrada" class="col">Titulo entrada: <input id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" required [(ngModel)]="entrada.titulo"></label>
+          <textarea id="entrada" name="entrada" placeholder="Escriba los nueva entrada" class="col" [(ngModel)]="entrada.texto"></textarea>
+          <textarea id="keywords" name="keywords" placeholder="Escriba palabras clave de la entrada" class="col" [(ngModel)]="palabrasClave"></textarea>
 
           <!-- <li><label>¿Cuanta experiencia tienes en deportes de riesgo?</label></li>
               <li><label for="radio_poco"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label></li>
