--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -3,20 +3,33 @@
       <div class="col-10">
 <div id="formulario" class="oculto">
   <h2>Contacta con nosotros</h2>
-  <form name="form_1" id="form_1" method="post"> 
-          <label for="nombre" class="col">Nombre: <input id ="nombre" type="text" name="nombre" placeholder="Introduce tu nombre" required></label>
-          <label for="email" class="col">Email:<input id="email" name="email" type="email" placeholder="Introduce tu email" required></label>
+  <form name="form_1" id="form_1" (submit) = "enviarDatos()" #formFormulario = "ngForm"> 
+          <label for="nombre" class="col">Nombre: <input #nameState="ngModel" id ="nombre" type="text" name="nombre" placeholder="Introduce tu nombre" [(ngModel)] = "nombre" required></label>
+           <div [hidden]="nameState.valid || nameState.untouched">
+                    <div class="error-message">El nombre debe tener más de dos caracteres.
+
+                    </div>
+                </div>
+          <label for="email" class="col">Email:<input #emailState="ngModel" id="email" name="email" type="email" placeholder="Introduce tu email" [(ngModel)] = "email" required></label>
+          <div [hidden]="emailState.valid || emailState.untouched">
+                <div class="error-message"  [hidden]="!emailState.errors?.required">El email es obligatorio.</div>
+                <div class="error-message" [hidden]="!emailState.errors?.pattern">El email debe tener un formato correcto. </div>
+</div>
           <label class="col">¿Cuanta experiencia tienes en deportes de riesgo?</label>
-          <label for="radio_poco" class="col"><input type="radio" id="radio_poco" name="experiencia" value="Poca" required>Poco</label>
-          <label for="radio_normal" class="col"><input type="radio" id="radio_normal" name="experiencia"  value="Normal" required>Normal</label> 
-          <label for="radio_mucho" class="col"><input type="radio" id="radio_mucho" name="experiencia"  value="Mucha" required>Mucho</label>
+          <label for="radio_poco" class="col"><input type="radio" #radioState="ngModel" id="radio_poco" name="experiencia"  [(ngModel)]="experienciaDatos" value="Poca" required>Poco</label>
+          <label for="radio_normal" class="col"><input type="radio" #radioState="ngModel" id="radio_normal" name="experiencia" [(ngModel)]="experienciaDatos"  value="Normal" required>Normal</label> 
+          <label for="radio_mucho" class="col"><input type="radio" #radioState="ngModel" id="radio_mucho" name="experiencia" [(ngModel)]="experienciaDatos"  value="Mucha" required>Mucho</label>
+          <div [hidden]="radioState.valid || radioState.untouched">
+                <div class="error-message">Debe escoger una de las opciones
+                </div>
+            </div>
           <label for="coment" class="col">Envianos tu opinión:</label>
-          <textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos" class="col"></textarea>
-          <label for="checkbox" class="col"><input type="checkbox" name="noticias" id="checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label>         
+          <textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos" class="col" [(ngModel)] = "opinionDatos"></textarea>
+          <label for="checkbox" class="col"><input type="checkbox" name="noticias" id="checkbox" [(ngModel)] = "checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label>         
       <div class="spaced">
          
           <button type="reset" class="btn btn-secondary">Borrar</button>
-          <button id="submit" type="submit"  routerLink="../muestra-datos" class="btn btn-secondary">Enviar</button>
+          <button id="submit" type="submit"  class="btn btn-secondary" [disabled]="formFormulario.invalid">Enviar</button>
       </div>
  </form>
 </div>
