--- a/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
+++ b/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
@@ -6,11 +6,11 @@
  
    
 
-      <label class="col">Nombre: </label><label id="nombreDatos"></label>
-      <label class="col">Email: </label><label id="emailDatos"></label>
-      <label class="col" >Experiencia en deportes de riesgo: </label><label id="experienciaDatos"></label>
-      <label class="col">Envianos tu opinión: </label><label id="opinionDatos"></label>
-      <label class="col">Deseo recibir noticias y oportunidad sobre salto base: </label><label id="checkboxDatos"></label>
+      <label class="col">Nombre: <label id="nombreDatos"  >{{nombre}}</label></label>
+      <label class="col">Email:<label id="emailDatos" >{{email}}</label> </label>
+      <label class="col" >Experiencia en deportes de riesgo:<label id="experienciaDatos">{{experienciaDatos}}</label> </label>
+      <label class="col">Envianos tu opinión: <label id="opinionDatos">{{opinionDatos}}</label></label>
+      <label class="col">Deseo recibir noticias y oportunidad sobre salto base:<label id="checkboxDatos" >{{checkbox}}</label> </label>
   
 
 
