--- a/practica-angular/src/app/inicio/aside/aside.component.html
+++ b/practica-angular/src/app/inicio/aside/aside.component.html
@@ -1,4 +1,4 @@
-<aside>
+<aside  class= "col-5">
   <h4>Valery Rozov logra una nueva marca mundial al saltar desde 7.700 metros.</h4>
   <div><iframe src="https://www.youtube.com/embed/26XKztYw0SA" frameborder="0" allow="encrypted-media" allowfullscreen></iframe></div>
   <p>Hay gente a la que le gusta la comodidad del cuarto de estar y hay otra que no puede parar de batir récords uno tras otro. Valery Rozov, leyenda del salto BASE, es desde luego un buen ejemplo de la segunda categoría.</p>
