--- a/practica-angular/src/app/inicio/section/article1/article1.component.html
+++ b/practica-angular/src/app/inicio/section/article1/article1.component.html
@@ -1,4 +1,4 @@
-<article class="articulo left">
+<article>
   <h3>¿Qué es el salto BASE?</h3>  
   <p> El salto BASE en la actualidad, es considerado por muchos como el más arriesgado de entre los deportes extremos. <strong>El riesgo es considerable</strong>, sin embargo, muy calculado y controlado. Los practicantes de este deporte estudian cada salto antes de realizarlo y solo si las condiciones son las adecuadas para hacer el salto, se realiza. El salto BASE ya ha sido aceptado como un deporte aéreo en España y hay varias escuelas donde aprender esta modalidad.</p>
   <p>  Habitualmente se utiliza un sólo paracaídas especial. El uso de otro paracaídas de reserva, como se hace en los saltos desde una aeronave, no tiene mucho sentido y es opcional, ya que se suele saltar de cabeza desde muy poca altura, en comparación con un salto de avión. Se trata, pues, de saltos muy breves, en los que no habría tiempo de activar un paracaídas de reserva, en caso de que fallara el paracaídas principal. Es por ello que los paracaídas empleados se asemejan más al paracaídas de reserva que al principal de los usados en salto de avión.</p>         
