--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -10,7 +10,7 @@
 
                     </div>
                 </div>
-          <label for="email" class="col">Email:<input #emailState="ngModel" id="email" name="email" type="email" placeholder="Introduce tu email" [(ngModel)] = "email" required></label>
+          <label for="email" class="col">Email:<input #emailState="ngModel" id="email" name="email" type="email" placeholder="Introduce tu email" [(ngModel)] = "email" required pattern='^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})'></label>
           <div [hidden]="emailState.valid || emailState.untouched">
                 <div class="error-message"  [hidden]="!emailState.errors?.required">El email es obligatorio.</div>
                 <div class="error-message" [hidden]="!emailState.errors?.pattern">El email debe tener un formato correcto. </div>
