--- a/practica-angular/src/app/inicio/aside/aside.component.css
+++ b/practica-angular/src/app/inicio/aside/aside.component.css
@@ -3,10 +3,34 @@ aside{
     border-radius: 5px;
     border: solid 1px blue;
     padding:2%;
+    position: absolute;
+    right: 25px;
+    top: 0px;
    
 }
 aside div{
-   display: flex;
+    display: flex;
     justify-content: center;
     margin: 1%;
+}
+figure{
+    width: 100%;
+    height: 100%;
+   padding: 1%;
+}
+img{
+    width: 100%;
+    height:100%;
+}
+@media screen and (max-width: 800px){
+    aside{
+        position: relative;
+        right:0px;
+        top: 0px;
+        max-width: 100%;
+        margin: 1%;
+    }
+ 
+       
+    
 }
