Hechos estilos entradas y formulario y completado servicio

--- a/practica-angular/src/app/blog/pagina/pagina.component.html
+++ b/practica-angular/src/app/blog/pagina/pagina.component.html
@@ -4,12 +4,14 @@
         <div class="card-header">
           <p class="h4">{{entrada.titulo}}</p>
         </div>
-        <div class="card-body row">
-          <label class="col-1 text-primary">Autor: </label>
-          <p class="card-text col-11">{{entrada.autor}}</p>
-          <label class="col-1 text-primary">Email: </label>
-          <p class="card-text col-11">{{entrada.email}}</p>
-          </div>
+        <div class="card-body row col">
+          <label class="text-primary">Autor: </label>
+          <p class="card-text">{{entrada.autor}}</p>
+        </div>
+        <div class="card-body row col">
+          <label class="text-primary">Email: </label>
+          <p class="card-text">{{entrada.email}}</p>
+        </div>
         <div class="card-footer text-muted">
           <label class="text-primary">Texto: </label>
           <p class="card-text">{{entrada.texto}}</p>
