--- a/practica-angular/src/app/app.component.html
+++ b/practica-angular/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<bbl-header></bbl-header>
-<bbl-menu></bbl-menu>
+<bbl-header  class="mb-2"></bbl-header>
+<bbl-menu class="pt-2 pb-2 m-2"></bbl-menu>
 <main class="col">
     <router-outlet></router-outlet>
 </main>
