--- a/practica-angular/src/app/core/footer/footer.component.html
+++ b/practica-angular/src/app/core/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="bot">
   <div class="nombres">
       <div id="hcard-Diego-Garzon-Molina" class="vcard">
               <span class="fn n">
