--- a/practica-angular/src/app/inicio/section/article1/article1.component.html
+++ b/practica-angular/src/app/inicio/section/article1/article1.component.html
@@ -1,8 +1,13 @@
-<article>
+<article class="col-6">
   <h3>¿Qué es el salto BASE?</h3>  
   <p> El salto BASE en la actualidad, es considerado por muchos como el más arriesgado de entre los deportes extremos. <strong>El riesgo es considerable</strong>, sin embargo, muy calculado y controlado. Los practicantes de este deporte estudian cada salto antes de realizarlo y solo si las condiciones son las adecuadas para hacer el salto, se realiza. El salto BASE ya ha sido aceptado como un deporte aéreo en España y hay varias escuelas donde aprender esta modalidad.</p>
   <p>  Habitualmente se utiliza un sólo paracaídas especial. El uso de otro paracaídas de reserva, como se hace en los saltos desde una aeronave, no tiene mucho sentido y es opcional, ya que se suele saltar de cabeza desde muy poca altura, en comparación con un salto de avión. Se trata, pues, de saltos muy breves, en los que no habría tiempo de activar un paracaídas de reserva, en caso de que fallara el paracaídas principal. Es por ello que los paracaídas empleados se asemejan más al paracaídas de reserva que al principal de los usados en salto de avión.</p>         
   <p>  Un salto BASE ha de hacerse con el equipamiento específico para salto, ya que son muy diferentes las necesidades, tiempos de apertura y fuerzas que actúan en la apertura del paracaídas. Antes de iniciarse en el salto BASE se necesita dominar suficientemente la caída libre, lo que se puede conseguir habiendo realizado antes de 200 a 250 saltos en caída libre. Existen muchos sitios alrededor del mundo donde practicarlo. Kjerag, en Noruega, es uno de los lugares más altos desde donde se puede saltar, con una altura de unos 600 metros.</p>
 </article>
+<div  class="col-6 right">
+  <figure >
+  <img class="img-fluid" src="assets/image_home_article1.jpg" alt="Salto BASE en nucleo urbano" title ="Salto BASE en nucleo urbano">
+</figure>
+</div>
 
 
