--- a/practica-angular/src/app/inicio/section/article2/article2.component.html
+++ b/practica-angular/src/app/inicio/section/article2/article2.component.html
@@ -1,4 +1,4 @@
-<article  class="articulo right">
+<article class="col-6">
     <h3>Salto Base vs Paracaidismo</h3>  
     <p> Los saltadores B.A.S.E. han querido ir más allá, ya que el tradicional paracaidismo desde un avión en vuelo les ha quedado pequeño. Los saltos B.A.S.E. se hacen generalmente de altitudes mucho más bajas que las habituales en paracaidismo y en proximidad cercana al acantilado o a la torre que proporciona la plataforma del salto. Además un saltador B.A.S.E. adquiere en el salto una velocidad aérea más baja que un paracaidista, debido a la altitud limitada, y muy raramente llega a la velocidad terminal de un paracaidista.</p>
 
@@ -6,6 +6,12 @@
 
     <p>En saltos B.A.S.E. a baja altura, la apertura del paracaídas ocurre durante esta fase temprana del vuelo, así que si una mala salida conduce a un volteo con pérdida del control, el saltador tal vez no pueda corregirlo antes de la apertura. Si se despliega el paracaídas mientras el saltador está volteando, hay un riesgo elevado de enredo o de malfuncionamiento. También puede suceder que el saltador no esté encarado en la dirección correcta. Una apertura estando girado de esa manera, mirando en una dirección distinta a la que se tenía en el momento del salto, no es problema en paracaidismo; de hecho resulta indiferente en la mayoría de las ocasiones. Pero aperturas estando encarado en mala dirección, que han conducido a golpear el objeto del cual se saltaba, han causado graves lesiones y muertes en salto B.A.S.E.</p>
 </article>
+<div  class="col-6 center">
+    <figure  class="p-50 h-100">
+        <img class="img-fluid" src="assets/image_home_article3.jpg" alt="Salto BASE desde montaña"
+        title="Salto BASE desde montaña" >
+      </figure>
+      </div>
  
   
  
