--- a/practica-angular/src/app/inicio/section/article3/article3.component.html
+++ b/practica-angular/src/app/inicio/section/article3/article3.component.html
@@ -1,7 +1,13 @@
-<article class="articulo left">
+<div>
+<article class="col-6">
     <h3>Requisitos para el Salto Base</h3>
     <p>Se recomienda que un paracaidista experimentado abra su paracaídas no más bajo de 600 metros (2.000 pies). En aquel momento, si ya ha estado en caída libre al menos 300 m (1.000 pies), el paracaidista está volando a 275,4 km/h (76 m/s), y está a 11 segundos de la tierra. La mayoría de los saltos B.A.S.E. se hacen desde menos de 600 m (2.000 pies). Por ejemplo, un salto B.A.S.E. de un objeto de 150 m (500 pies) de altura está a alrededor de 5,6 segundos del suelo si el saltador permaneciera en caída libre toda la altura del salto (se suele llamar a esto: tiempo hasta el punto de impacto). En tal salto, el paracaídas debe abrirse aproximadamente a la mitad de la velocidad aérea del paracaidista, y debe hacerlo más rápidamente además, recorriendo durante la apertura una distancia en vertical más corta. Los sistemas estándares usados en paracaidismo no están diseñados para esta situación, de forma que los saltadores B.A.S.E. utilizan arneses y contenedores del paracaídas especialmente diseñados para ello, con pilotillos más grandes de lo normal, y saltan solamente con un paracaídas, puesto que no habría tiempo para utilizar un paracaídas de reserva.</p>
     <p>Los equipos estándares usados en paracaidismo se pueden utilizar solo en saltos B.A.S.E. altos. Si es modificado, quitando la bolsa y el slider, guardando las líneas en un bolsillo de la cola y colocándole un pilotillo grande, el material estándar empleado en paracaidismo se puede utilizar para saltos B.A.S.E. más bajos, pero es mucho más propenso a algunos tipos de malfuncionamiento que son raros en paracaidismo normal (tales como line-overs y líneas rotas).</p>
     <p>Otro riesgo es que la mayoría de los lugares donde se puede hacer salto B.A.S.E. tienen áreas muy pequeñas en las cuales aterrizar, a lo que además se añade que el saltador dispone de poco margen de altura y poco tiempo para ejecutar la maniobra de aproximación a la zona de aterrizaje. Un paracaidista principiante, después de la apertura del paracaídas, puede tener 5 minutos o más de vuelo bajo campana (con el paracaídas abierto) hasta el aterrizaje. Un salto B.A.S.E. desde una altura de 152 m (500 pies) tendrá un vuelo bajo campana de 10 a 15 segundos como mucho.</p>
 </article>
-    
+<figure  class="col-6">
+        <img class="img-fluid " src="assets/image_home_article2.jpg"
+         alt="Equipamiento para salto base" title ="Equipamiento para salto base">
+      </figure>
+    </div>
+ 
