--- a/practica-angular/src/app/blog/formulario/formulario.component.css
+++ b/practica-angular/src/app/blog/formulario/formulario.component.css
@@ -1,3 +1,10 @@
 textarea{
     max-height: 300px;
 }
+input, textarea{
+    border-radius: 0.5rem;
+    margin-left: 1rem;
+}
+label{
+    margin-top: 0.5rem;
+}
