Dado estilo al boton borrar entrada

--- a/practica-angular/src/app/blog/entradas/entradas.component.css
+++ b/practica-angular/src/app/blog/entradas/entradas.component.css
@@ -9,3 +9,12 @@ label:nth-of-type(even):not(.margen), .margen{
 .puntero, a, a span, span label{
     cursor: pointer;
 }
+button{
+    border-radius: 1rem;
+}
+
+div>span{
+    margin-top: auto;
+    margin-bottom: auto;
+    text-align: center;
+}
