--- a/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
+++ b/practica-angular/src/app/about/muestra-datos/muestra-datos.component.html
@@ -6,11 +6,11 @@
  
    
 
-      <label class="col">Nombre: <label id="nombreDatos"  >{{nombre}}</label></label>
-      <label class="col">Email:<label id="emailDatos" >{{email}}</label> </label>
-      <label class="col" >Experiencia en deportes de riesgo:<label id="experienciaDatos">{{experienciaDatos}}</label> </label>
-      <label class="col">Envianos tu opinión: <label id="opinionDatos">{{opinionDatos}}</label></label>
-      <label class="col">Deseo recibir noticias y oportunidad sobre salto base:<label id="checkboxDatos" >{{checkbox}}</label> </label>
+      <label class="col">Nombre: <label id="nombreDatos"  > {{datosD.nombre}}</label></label>
+      <label class="col">Email: <label id="emailDatos" > {{datosD.email}}</label> </label>
+      <label class="col" >Experiencia en deportes de riesgo: <label id="experienciaDatos"> {{datosD.experienciaDatos}}</label> </label>
+      <label class="col">Envianos tu opinión: <label id="opinionDatos"> {{datosD.opinionDatos}}</label></label>
+      <label class="col">Deseo recibir noticias y oportunidad sobre salto base: <label id="checkboxDatos" > {{datosD.checkbox}}</label> </label>
   
 
 
